tests/neg/i5332.scala

object O{
  type T[R] = X
  class X extends T[Int] // error
}